appId: com.uauplus.mobile
---
- tapOn: "Sua senha"
- takeScreenshot: debug-after-tap-password
- pasteText
- takeScreenshot: debug-after-paste-password
- tapOn: "Entrar"
- waitForAnimationToEnd
- takeScreenshot: 02-home
- extendedWaitUntil:
    visible: "Perfil"
    timeout: 15000
- tapOn: "Perfil"
- waitForAnimationToEnd
- takeScreenshot: 03-perfil
