appId: com.uauplus.mobile
---
- launchApp:
    clearState: true
- takeScreenshot: 01-login
- tapOn: "voce@email.com"
- inputText: "teste.fase6@uauteste.com"
- tapOn: "Sua senha"
- inputText: "SenhaTeste@123"
- tapOn: "Entrar"
- waitForAnimationToEnd
- takeScreenshot: 02-home
- extendedWaitUntil:
    visible: "Perfil"
    timeout: 15000
- tapOn: "Perfil"
- waitForAnimationToEnd
- takeScreenshot: 03-perfil
